force-app/main/default/objects/User/fields/Primary_Territory__c.field-meta.xml
<CustomField>
    <fullName>Primary_Territory__c</fullName>
    <description>Primary sales territory for the user</description>
    <label>Primary Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Users</relationshipLabel>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>