force-app/main/default/objects/User/fields/Target_Attainment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Target_Attainment_Percentage__c</fullName>
    <description>Percentage of sales target achieved</description>
    <formula>IF(Sales_Target__r.Target_Amount__c > 0, 
        (YTD_Sales__c / Sales_Target__r.Target_Amount__c) * 100, 
        0
    )</formula>
    <formulaTreatBlanksAs>Zero</formulaTreatBlanksAs>
    <label>Target Attainment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>